add links, add services, add images, change fonts

--- a/index.html
+++ b/index.html
@@ -22,6 +22,18 @@
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
+      href="https://fonts.googleapis.com/css2?family=Bonheur+Royale&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Roboto+Mono:ital,wght@0,100..700;1,100..700&family=Rubik:ital,wght@0,300..900;1,300..900&display=swap"
+      rel="stylesheet"
+    />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Roboto+Mono:ital,wght@0,100..700;1,100..700&family=Rubik:ital,wght@0,300..900;1,300..900&display=swap"
+      rel="stylesheet"
+    />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
       href="https://fonts.googleapis.com/css2?family=Rubik:ital,wght@0,300..900;1,300..900&display=swap"
       rel="stylesheet"
     />
@@ -53,13 +65,18 @@
               aria-expanded="false"
               aria-label="Toggle navigation"
             >
-              <span class="navbar-toggler-icon"></span>
+              <span class="navbar-toggler-icon navbar-dark"></span>
             </button>
             <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
               <div class="navbar-nav">
                 <a class="french nav-link" href="#section-one">À propos</a>
                 <a class="english nav-link" href="#section-one">About me</a>
-                <a class="nav-link" href="#section-two">Services</a>
+                <a class="french nav-link" href="#section-two"
+                  >Entraînez-vous avec moi</a
+                >
+                <a class="english nav-link" href="#section-two"
+                  >Train with me</a
+                >
                 <a class="french nav-link" href="#section-three">Témoignages</a>
                 <a class="english nav-link" href="#section-three"
                   >Testimonials</a
@@ -73,7 +90,7 @@
         </nav>
       </div>
       <div class="logo">
-        <h1>Fabé Dia Coaching</h1>
+        <img src="./images/fabe-logo.png" />
       </div>
       <div class="hero">
         <h2 class="gold french">Transformez votre esprit et votre corps</h2>
@@ -141,7 +158,7 @@
             Coaching chez moi :<br />
             <a
               class="underline"
-              href="https://maps.app.goo.gl/1DXKrZC3WCs1dzoUA"
+              href="https://maps.app.goo.gl/DE27VC1wQ637c8mP7"
               target="_blank"
               >Studio Brignoles</a
             >
@@ -198,6 +215,11 @@
       </div>
       <section class="about">
         <a id="section-one"></a>
+        <img
+          class="logo-small"
+          src="./images/fabe-logo.png"
+          alt="Fabé logo gold on black"
+        />
         <h2 class="french">À propos</h2>
         <h2 class="english">About me</h2>
         <div class="socials">
@@ -271,15 +293,32 @@
         </button>
       </section>
       <hr />
+
       <section class="services">
         <a id="section-two"></a>
-        <h2>Services</h2>
+        <h2 class="french">Entraînez-vous avec moi</h2>
+        <h2 class="english">Train with me</h2>
         <p class="french">
-          Lorem ipsum cras dictum nunc et nisl aliquet aliquet. Nam ut nulla
-          scelerisque, molestie turpis ac, dictum mauris. Pellentesque habitant
-          morbi tristique senectus et netus et malesuada fames ac turpis
-          egestas. Vestibulum interdum aliquam nibh, at vulputate est
-          sollicitudin vitae.
+          Le quotidien est stressant, la routine métro-boulot-dodo fatiguante,
+          peu de temps pour soi. Le mouvement intégral avec Fabé est une
+          solution efficace. C'est la redécouverte de votre corps qui bouge de
+          façon naturelle et fonctionnelle allié au plaisir de prendre soin de
+          vous.<br /><br />L'entrainement se fonde sur deux principes simples.
+          Le premier est de se référer en permanence aux gestes de notre
+          quotidien. Sans nous apercevoir, nous faisons travailler tous les
+          jours nos muscles en soulevant les sacs de course, en passant
+          l’aspirateur, en montant l’escalier, en nous levant pour aller
+          chercher un dossier, en portant nos enfants ... Le mouvement intégral
+          vise donc à reproduire ces différents mouvements en les optimisant
+          pour éviter les blessures et pour développer une silhouette
+          harmonieuse, et en les rendant plus intenses et plus performants.<br /><br />Le
+          second principe est de faire travailler les chaînes musculaires dans
+          leur globalité. Au contraire des entrainements de musculation
+          classiques, dits analytiques, qui se concentrent sur un ou plusieurs
+          muscles en les isolant, le travail fonctionnel prend en compte toute
+          la chaîne musculaire et les articulations. Le haut et le bas du corps
+          travaillent en même temps et non de façon isolée. Des d’exercices sont
+          complets et ludiques.
         </p>
         <p class="english">
           Cras dictum nunc et nisl aliquet aliquet. Nam ut nulla scelerisque,
@@ -341,6 +380,11 @@
       <hr />
       <section class="contact">
         <a id="section-four"></a>
+        <img
+          class="logo-small"
+          src="./images/fabe-logo.png"
+          alt="Fabé logo gold on black"
+        />
         <h2 class>Contact</h2>
         <h3>Fabé Dia</h3>
         <div class="contact-socials">
@@ -357,6 +401,17 @@
             ></i
           ></a>
         </div>
+        <div class="map-container">
+          <iframe
+            src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d5110.342790921619!2d6.068922875543465!3d43.405689468404866!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x12c94206c3c635c3%3A0x45bddc584aa55d1!2s1%20Av.%20Henri%20Buzzegoli%2C%2083170%20Brignoles!5e1!3m2!1sen!2sfr!4v1737630887926!5m2!1sen!2sfr"
+            width="280"
+            height="157.5"
+            style="border: 0"
+            allowfullscreen=""
+            loading="lazy"
+            referrerpolicy="no-referrer-when-downgrade"
+          ></iframe>
+        </div>
         <button class="french btn-standard btn-color contact-btn">
           <a href="mailto:diafabe14@gmail.com"> Contactez-moi</a>
         </button>
@@ -369,32 +424,111 @@
         <a id="section-five"></a>
         <h2 class="french">Galerie</h2>
         <h2 class="english">Gallery</h2>
-        <iframe
-          width="280"
-          height="157.5"
-          src="https://www.youtube.com/embed/xC5StTlrY0c?si=0R4RZNz43QSUtzxT"
-          title="YouTube video player"
-          frameborder="0"
-          allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
-          referrerpolicy="strict-origin-when-cross-origin"
-          allowfullscreen
-        ></iframe>
-        <iframe
-          width="280"
-          height="157.5"
-          src="https://www.youtube.com/embed/UJKHEMr1ssY?si=szgU3Ct01AVG1kzZ"
-          title="YouTube video player"
-          frameborder="0"
-          allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
-          referrerpolicy="strict-origin-when-cross-origin"
-          allowfullscreen
-        ></iframe>
+        <div class="horizontal-gallery">
+          <iframe
+            width="280"
+            height="157.5"
+            src="https://www.youtube.com/embed/xC5StTlrY0c?si=0R4RZNz43QSUtzxT"
+            title="YouTube video player"
+            frameborder="0"
+            allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+            referrerpolicy="strict-origin-when-cross-origin"
+            allowfullscreen
+          ></iframe>
+          <iframe
+            width="280"
+            height="157.5"
+            src="https://www.youtube.com/embed/UJKHEMr1ssY?si=szgU3Ct01AVG1kzZ"
+            title="YouTube video player"
+            frameborder="0"
+            allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+            referrerpolicy="strict-origin-when-cross-origin"
+            allowfullscreen
+          ></iframe>
+          <img
+            width="280"
+            height="157.5"
+            src="./images/fabe6group.jpg"
+            alt="Fabé with a training group"
+          />
+          <img
+            width="280"
+            height="157.5"
+            src="./images/fabe14.jpg"
+            alt="Fabé carrying Olympic torch"
+          />
+        </div>
+        <div class="vertical-gallery">
+          <img
+            width="157.5"
+            height="200"
+            src="./images/fabe1.jpg"
+            alt="Fabé stretching"
+          />
+          <img
+            width="157.5"
+            height="200"
+            src="./images/fabe3.jpg"
+            alt="Fabé in studio"
+          />
+          <img
+            width="157.5"
+            height="200"
+            src="./images/fabe4.jpg"
+            alt="Fabé in studio"
+          />
+          <img
+            width="157.5"
+            height="200"
+            src="./images/fabe5.jpg"
+            alt="Fabé in yoga pose"
+          />
+          <img
+            width="157.5"
+            height="200"
+            src="./images/fabe8.jpg"
+            alt="Fabé running"
+          />
+          <img
+            width="157.5"
+            height="200"
+            src="./images/fabe7.jpg"
+            alt="Fabé doing up shoelaces"
+          />
+          <img
+            width="157.5"
+            height="200"
+            src="./images/fabe10.jpg"
+            alt="Fabé demonstrating equipment"
+          />
+          <img
+            width="157.5"
+            height="200"
+            src="./images/fabe9.jpg"
+            alt="Fabé interviewing"
+          />
+        </div>
       </section>
+      <h3 class="varstar-pub">
+        Site web conçu avec amour par
+        <a class="underline" href="https://varstar-web.com/" target="_blank"
+          >Varstar</a
+        >
+        ⭐️
+      </h3>
     </main>
     <footer>
-      <a href="#" target="_blank"><p>Facebook</p></a>
-      <a href="#" target="_blank"><p>Instagram</p></a>
-      <a href="#" target="_blank"><p>LinkedIn</p></a>
+      <a href="https://www.facebook.com/fabe.dia/" target="_blank"
+        ><p>Facebook</p></a
+      >
+      <a href="https://www.instagram.com/fabedia_coaching/" target="_blank"
+        ><p>Instagram</p></a
+      >
+      <a
+        href="https://www.linkedin.com/in/fab%C3%A9-dia-16723760/?originalSubdomain=fr"
+        target="_blank"
+        ><p>LinkedIn</p></a
+      >
     </footer>
     <script>
       document
