--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
     />
     <link rel="stylesheet" href="styles.css" />
     <title>Fabé Dia</title>
-    <link rel="icon" href="company-favicon.png" type="image/x-icon" />
+    <link rel="icon" href="./images/favicon.png" type="image/x-icon" />
   </head>
 
   <body>
@@ -386,7 +386,41 @@
           alt="Fabé logo gold on black"
         />
         <h2 class>Contact</h2>
-        <h3>Fabé Dia</h3>
+        <h2>Fabé DIA</h2>
+        <h3 class="french">Appelez-moi ou envoyez-moi un message sur :</h3>
+        <h3 class="english">Call or send me a message on:</h3>
+        <h3><a href="tel:+33787145527">+33 781 77 40 97</a></h3>
+        <h3 class="french space-above">Envoyez-moi un e-mail :</h3>
+        <h3 class="english space-above">Send me an email :</h3>
+        <button class="french btn-standard btn-color contact-btn">
+          <a href="mailto:diafabe14@gmail.com">E-mail Fabé</a>
+        </button>
+        <button class="english btn-standard btn-color contact-btn">
+          <a href="mailto:diafabe14@gmail.com">Email Fabé</a>
+        </button>
+        <h3 class="french space-above">
+          Rendez-moi visite dans mon studio (uniquement sur rendez-vous) à<br />
+          1 Avenue Henri Buzzegoli, 83170 Brignoles :
+        </h3>
+        <h3 class="english space-above">
+          Visit me in my studio (with appointments only) at:<br />
+          1 Avenue Henri Buzzegoli, 83170 Brignoles :
+        </h3>
+        <div class="map-container">
+          <iframe
+            src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d5110.342790921619!2d6.068922875543465!3d43.405689468404866!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x12c94206c3c635c3%3A0x45bddc584aa55d1!2s1%20Av.%20Henri%20Buzzegoli%2C%2083170%20Brignoles!5e1!3m2!1sen!2sfr!4v1737630887926!5m2!1sen!2sfr"
+            width="280"
+            height="157.5"
+            style="border: 0"
+            allowfullscreen=""
+            loading="lazy"
+            referrerpolicy="no-referrer-when-downgrade"
+          ></iframe>
+        </div>
+        <h3 class="french space-above">
+          Ou retrouvez-moi sur les réseaux sociaux :
+        </h3>
+        <h3 class="english space-above">Or find me on social media:</h3>
         <div class="contact-socials">
           <a href="https://www.facebook.com/fabe.dia" target="_blank"
             ><i
@@ -401,23 +435,6 @@
             ></i
           ></a>
         </div>
-        <div class="map-container">
-          <iframe
-            src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d5110.342790921619!2d6.068922875543465!3d43.405689468404866!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x12c94206c3c635c3%3A0x45bddc584aa55d1!2s1%20Av.%20Henri%20Buzzegoli%2C%2083170%20Brignoles!5e1!3m2!1sen!2sfr!4v1737630887926!5m2!1sen!2sfr"
-            width="280"
-            height="157.5"
-            style="border: 0"
-            allowfullscreen=""
-            loading="lazy"
-            referrerpolicy="no-referrer-when-downgrade"
-          ></iframe>
-        </div>
-        <button class="french btn-standard btn-color contact-btn">
-          <a href="mailto:diafabe14@gmail.com"> Contactez-moi</a>
-        </button>
-        <button class="english btn-standard btn-color contact-btn">
-          <a href="mailto:diafabe14@gmail.com"> Contact me</a>
-        </button>
       </section>
       <hr />
       <section class="images">
@@ -463,7 +480,7 @@
             width="157.5"
             height="200"
             src="./images/fabe1.jpg"
-            alt="Fabé stretching"
+            alt="Fabé warming up"
           />
           <img
             width="157.5"
@@ -471,17 +488,12 @@
             src="./images/fabe3.jpg"
             alt="Fabé in studio"
           />
+
           <img
             width="157.5"
             height="200"
-            src="./images/fabe4.jpg"
-            alt="Fabé in studio"
-          />
-          <img
-            width="157.5"
-            height="200"
-            src="./images/fabe5.jpg"
-            alt="Fabé in yoga pose"
+            src="./images/fabe10.jpg"
+            alt="Fabé demonstrating equipment"
           />
           <img
             width="157.5"
@@ -492,20 +504,27 @@
           <img
             width="157.5"
             height="200"
-            src="./images/fabe7.jpg"
-            alt="Fabé doing up shoelaces"
-          />
-          <img
-            width="157.5"
-            height="200"
-            src="./images/fabe10.jpg"
-            alt="Fabé demonstrating equipment"
-          />
-          <img
-            width="157.5"
-            height="200"
             src="./images/fabe9.jpg"
             alt="Fabé interviewing"
+          />
+          <img
+            width="157.5"
+            height="200"
+            src="./images/fabe12.jpg"
+            alt="Fabé sitting"
+          />
+
+          <img
+            width="157.5"
+            height="200"
+            src="./images/fabe16.jpg"
+            alt="Fabé smiling"
+          />
+          <img
+            width="157.5"
+            height="200"
+            src="./images/fabe15.jpg"
+            alt="Fabé stretching"
           />
         </div>
       </section>
