css tweaks, hide testimonials section

--- a/index.html
+++ b/index.html
@@ -75,10 +75,10 @@
                   >Entraînez-vous avec moi</a
                 >
                 <a class="english nav-link" href="#services">Train with me</a>
-                <a class="french nav-link" href="#testimonials">Témoignages</a>
+                <!-- <a class="french nav-link" href="#testimonials">Témoignages</a>
                 <a class="english nav-link" href="#testimonials"
                   >Testimonials</a
-                >
+                > -->
                 <a class="nav-link" href="#contact">Contact</a>
                 <a class="french nav-link" href="#gallery">Galerie</a>
                 <a class="english nav-link" href="#gallery">Gallery</a>
@@ -99,7 +99,7 @@
         </div>
       </div>
       <div class="card-container">
-        <div class="card"">
+        <div class="card">
           <img
             class="card-img-top"
             src="./images/football-rethaferguson.jpg"
@@ -109,7 +109,7 @@
             <p class="card-text">PERFORMANCE</p>
           </div>
         </div>
-        <div class="card"">
+        <div class="card">
           <img
             class="card-img-top"
             src="./images/endurance-cleiton-silva.jpg"
@@ -119,7 +119,7 @@
             <p class="card-text">ENDURANCE</p>
           </div>
         </div>
-        <div class="card"">
+        <div class="card">
           <img
             class="card-img-top"
             src="./images/weight-loss-shvetsa.jpg"
@@ -130,7 +130,7 @@
             <p class="english card-text">WEIGHT LOSS</p>
           </div>
         </div>
-        <div class="card"">
+        <div class="card">
           <img
             class="card-img-top"
             src="./images/basketball-yaroslav-shuraev.jpg"
@@ -238,23 +238,34 @@
             alt="Fabé tying shoe laces"
           />
           <p class="about-para french">
-            Bonjour 👋 Je m'appelle Fabé Dia et ... <br /><br />Lorem ipsum dolor sit amet consectetur adipisicing elit. Magnam quasi consequatur repellendus. Eligendi odit unde cupiditate! Praesentium sit sequi beatae sint accusamus nam quis! Perspiciatis hic optio impedit nihil facere.<br /><br />Vous pouvez également lire à mon sujet sur ma page 
+            Bonjour 👋 Je m'appelle Fabé Dia et ... <br /><br />Lorem ipsum
+            dolor sit amet consectetur adipisicing elit. Magnam quasi
+            consequatur repellendus. Eligendi odit unde cupiditate! Praesentium
+            sit sequi beatae sint accusamus nam quis! Perspiciatis hic optio
+            impedit nihil facere.<br /><br />Vous pouvez également lire à mon
+            sujet sur ma page
             <a
               class="underline"
               href="https://fr.wikipedia.org/wiki/Fab%C3%A9_Dia"
               target="_blank"
               >Wikipédia.</a
-            ><br /><br />N'hésitez pas à me contacter si vous souhaitez obtenir plus d'informations sur moi et les services que je propose.
+            ><br /><br />N'hésitez pas à me contacter si vous souhaitez obtenir
+            plus d'informations sur moi et les services que je propose.
           </p>
           <p class="about-para english">
-            Hello 👋 My name is Fabé Dia and ... <br /><br />Lorem ipsum dolor sit amet consectetur adipisicing elit. Magnam quasi consequatur repellendus. Eligendi odit unde cupiditate! Praesentium sit sequi beatae sint accusamus nam quis! Perspiciatis hic optio impedit nihil facere.<br /><br />You can also read about me on my
+            Hello 👋 My name is Fabé Dia and ... <br /><br />Lorem ipsum dolor
+            sit amet consectetur adipisicing elit. Magnam quasi consequatur
+            repellendus. Eligendi odit unde cupiditate! Praesentium sit sequi
+            beatae sint accusamus nam quis! Perspiciatis hic optio impedit nihil
+            facere.<br /><br />You can also read about me on my
             <a
               class="underline"
               href="https://en.wikipedia.org/wiki/Fab%C3%A9_Dia"
               target="_blank"
               >Wikipedia</a
             >
-            page.<br /><br />Please don't hesitate to get in touch if you would like more information about me and the services I offer.
+            page.<br /><br />Please don't hesitate to get in touch if you would
+            like more information about me and the services I offer.
           </p>
         </div>
 
@@ -364,7 +375,7 @@
         </p>
       </section>
       <hr />
-      <section class="testimonials">
+      <!-- <section class="testimonials">
         <a id="testimonials"></a>
         <h2 class="french">Témoignages</h2>
         <h2 class="english">Testimonials</h2>
@@ -415,7 +426,7 @@
         </div>
       </div>
       </section>
-      <hr />
+      <hr /> -->
       <section class="contact">
         <a id="contact"></a>
         <h2 class>Contact</h2>
