--- a/index.html
+++ b/index.html
@@ -45,6 +45,15 @@
     />
     <link rel="stylesheet" href="styles.css" />
     <title>Fabé Dia</title>
+    <meta
+      name="description"
+      content="Services de coaching proposés par Fabe Dia, coach sportif, qui a participé à deux Jeux olympiques pour la France en athlétisme"
+    />
+    <meta
+      name="keywords"
+      content="coaching, sport, fitness, coach personnel, athlétisme, course à pied, apprendre à courir, coach sportif, coaching privé, coaching sportif, Var, Provence, Carcès, Brignoles, athlétisme, Jeux olympiques, coureur, sportif, professionnel du sport"
+    />
+    <meta name="author" content="Fabé Dia" />
     <link rel="icon" href="./images/favicon.png" type="image/x-icon" />
   </head>
 
@@ -88,7 +97,7 @@
         </nav>
       </div>
       <div class="logo">
-        <img src="./images/fabe-logo.png" />
+        <img src="./images/fabe-logo.png" alt="Fabé logo" />
       </div>
       <div class="hero">
         <h2 class="gold french">Transformez votre esprit et votre corps</h2>
